# churn-telcom

./: .gitignore  Makefile  README.md  data_preprocessing.py  pyproject.toml
data/processed/: .gitignore  churn_dataset.csv.dvc
